- Feature: [#11788] Command to extract images from a .DAT file.
- Feature: [#11959] Hacked go-kart tracks can now use 2x2 bends, 3x3 bends and S-bends.
- Feature: [#12090] Boosters for the Wooden Roller Coaster (if the "Show all track pieces" cheat is enabled).
- Feature: [#12184] .sea (RCT Classic) scenario files can now be imported.
- Change: [#11209] Warn when user is running OpenRCT2 through Wine.
- Change: [#11358] Switch copy and paste button positions in tile inspector.
- Change: [#11449] Remove complete circuit requirement from Air Powered Vertical Coaster (for RCT1 parity).
- Change: [#11898] The `openrct-data-path` command-line argument has been renamed to `openrct2-data-path`.
- Change: [#11944] The ride list sort mode is now remembered for the duration of the game.
- Fix: [#1013] Negative length displayed in Ride window.
- Fix: [#1148] Research funding dropdown not shown in finances window.
- Fix: [#5451] Guests scream on every descent, no matter how small.
- Fix: [#6119] Advertising campaign for ride window not updated properly (original bug).
- Fix: [#7006] Submarine Ride is in the wrong research group.
- Fix: [#7324] Research window shows vehicle name instead of ride name.
- Fix: [#7969, #8175, #12501] When loading a landscape in the Scenario Editor, the inventions list, financial settings and objective settings are reset.
- Fix: [#10634] Guests are unable to use uphill paths out of toilets.
- Fix: [#10751] Saved mazes are incomplete.
- Fix: [#10876] When removing a path, its guest entry point is not removed.
- Fix: [#10876] There can be multiple peep spawns on the same location.
- Fix: [#11002] Rides list shows both red and green light activated.
- Fix: [#11072] Land and water tools working out of bounds (original bug).
- Fix: [#11085] Handle player list before game actions during map load.
- Fix: [#11259] Custom JSON object breaks saves.
- Fix: [#11290] Perform funds checking for all peeps entering a ride.