@@ -169,6 +169,7 @@ private:
     StringTable _stringTable;
     ImageTable _imageTable;
     std::vector<uint8_t> _sourceGames;
+    std::vector<std::string> _authors;
     bool _isJsonObject{};
 
 protected:
@@ -246,6 +247,9 @@ public:
     }
     std::vector<uint8_t> GetSourceGames();
     void SetSourceGames(const std::vector<uint8_t>& sourceGames);
+
+    const std::vector<std::string>& GetAuthors() const;
+    void SetAuthors(const std::vector<std::string>&& authors);
 
     const ImageTable& GetImageTable() const
     {
